[package]
name = "udyndns"
version = "0.1.0"
edition = "2024"

[dependencies]
addr = "0.15"
clap = { version = "4.5", features = ["derive"] }
derive_more = { version = "2.1", features = ["from"] }
dirs = "6.0"
gcp_auth = "0.12"
log = "0.4"
reqwest = { version = "0.12", features = ["json"] }
rstaples = "0.3"
serde = "1.0"
serde_json = "1.0"
tokio = { version = "1.48", features = ["full"] }

[target.aarch64-unknown-linux-gnu.dependencies]
openssl = { version = "0.10", features = ["vendored"] }

[profile.release]
opt-level = "s"
lto = true
